# rustygolem

./: .gitignore  Cargo.toml  README.md  bot_config.dhall  golem_config.dhall  run.sh
migrations/2021-01-18-074526_crypto_rate/: down.sql  up.sql
migrations/2021-02-06-203356_dogecoin_support/: down.sql
migrations/2021-04-18-125300_ripple_support/: down.sql  up.sql
migrations/2021-05-10-192045_algorand/: down.sql
plugin-core/: Cargo.toml
plugin-core/src/: lib.rs  types.rs
plugin-core/src/utils/: parser.rs
plugin-twitch/: Cargo.toml
plugin-twitch/src/: config.rs  errors.rs  lib.rs  plugin.rs  webhook_server.rs
plugin-url/: Cargo.toml
plugin-url/src/: lib.rs  parsing_utils.rs
republican-calendar/: Cargo.toml
republican-calendar/src/: lib.rs
rustygolem/: Cargo.toml  golem_config.dhall  rustygolem.sqlite
rustygolem/migrations/2021-02-06-203356_dogecoin_support/: up.sql
rustygolem/migrations/2021-05-10-192045_algorand/: up.sql
rustygolem/src/: golem.rs  main.rs  plugin.rs  testtwitch.rs
rustygolem/src/plugins/: ctcp.rs  echo.rs  joke.rs  mod.rs  republican_calendar.rs
rustygolem/src/plugins/crypto/: db.rs  mod.rs  plugin.rs
rustygolem/src/plugins/twitch/: client.rs  config.rs  mod.rs  plugin.rs  webhook_server.rs
rustygolem/src/utils/: parser.rs
src/: bot.rs  config.rs  crypto.rs  ctcp.rs  db.rs  golem.rs  joke.rs  main.rs  parser.rs  plugin.rs  republican_calendar.rs  schema.rs  testtwitch.rs  urbain.rs
src/plugins/: ctcp.rs  echo.rs  joke.rs
src/plugins/crypto/: plugin.rs
src/plugins/twitch/: plugin.rs  webhook_server.rs
src/twitch/: client.rs  config.rs  message.rs  mod.rs  state.rs  subscriptions.rs  webhook_server.rs
src/utils/: messages.rs  parser.rs
