[package]
name = "rustycoucou"
version = "0.1.0"
authors = ["Grégoire Charvet 黑瓜 <greg@geekingfrog.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
chrono = "0.4.19"
diesel = { version = "1.4.5", features = ["sqlite"] }
futures = "0.3.9"
irc = {git = "https://github.com/aatxe/irc", branch = "develop", default-features = false, features = ["tls-native"]}
itertools = "0.10.0"
nom = "6.0.1"
reqwest = "0.11.0"
structopt = "0.3.21"
tokio = { version = "1.0.1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "0.6.1"
