[package]
name = "rustycoucou"
version = "0.1.0"
authors = ["Grégoire Charvet 黑瓜 <greg@geekingfrog.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
chrono = "0.4.19"
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
# diesel-derive-enum = { version = "1.1.0", features = ["sqlite"] }
diesel_migrations = "1.4.0"
env_logger = "0.8.2"
futures = "0.3.9"
irc = {git = "https://github.com/aatxe/irc", branch = "develop", default-features = false, features = ["tls-native"]}
itertools = "0.10.0"
log = "0.4.14"
nom = "6.0.1"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
structopt = "0.3.21"
tokio = { version = "1.0.1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "0.6.1"
