[package]
name = "plugin-twitch"
version = "0.1.0"
edition = "2021"
description = "Twitch integration"

[dependencies]
anyhow = "1.0.54"
plugin-core = { path = "../plugin-core" }
tokio = { version = "1.12.0", features = ["full"] }
twitch_api2 = { version = "0.6.0-rc.3", features = ["twitch_oauth2", "helix", "reqwest_client", "eventsub"] }
reqwest = "^0.11"
async-trait = "0.1.68"
irc = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_dhall = "0.10.1"
log = "0.4.14"
time = { version = "0.3.7", features = ["parsing", "macros", "formatting"]}
futures = "^0.3.16"
hmac = "0.11.0"
sha2 = "0.9.8"
thiserror = "1.0.30"
axum = "0.6.18"


[[bin]]
name = "testtwitch"
path = "src/bin/testtwitch.rs"
