[package]
name = "plugin-url"
version = "0.1.0"
edition = "2021"
description = "Remember recent urls and fetch metadata for them"

[dependencies]
async-trait = "0.1.52"
google-youtube3 = "2.0.10"
irc = { version = "0.15.0", features = ["tls-native"]}
log = "0.4.14"
nom = "7.1.0"
parking_lot = "0.12.0"
plugin-core = { path = "../plugin-core" }
pretty_assertions = "1.1.0"
url = "2.2.2"
reqwest = "0.11"
scraper = "0.12.0"
