[package]
name = "plugin-url"
version = "0.1.0"
edition = "2021"
description = "Remember recent urls and fetch metadata for them"

[dependencies]
anyhow = "*"
async-trait = "0.1.52"
google-youtube3 = "2.0.10"
irc = { version = "0.15.0", features = ["tls-native"]}
log = "0.4.14"
mime = "^0.3.16"
nom = "7.1.0"
parking_lot = "0.12.0"
plugin-core = { path = "../plugin-core" }
pretty_assertions = "1.1.0"
reqwest = { version = "^0.11", features = ["json", "stream"] }
scraper = "0.12.0"
serde_dhall = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }
url = "2.2.2"
encoding_rs = "*"
bytes = "*"
futures = "*"

[[bin]]
name = "teststreaming"
path = "src/bin/teststreaming.rs"

[[bin]]
name = "testyt"
path = "src/bin/testyt.rs"

[[bin]]
name = "testsniff"
path = "src/bin/test_sniff_url.rs"
